# bytetracker

./: Cargo.toml  build.rs  bytetrack.cpp  bytetrack.h
lib/bytetrack/: CMakeLists.txt
lib/bytetrack/src/: BYTETracker.cpp  utils.cpp
src/: lib.rs  main.rs
